--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
 uuid
 pyromod
 pyrogram
-pyTelegramBotAPI
-python-telegram-bot
-requests
-rich
-telegram
-asyncio
+pyTelegramBotAPI==2.0.106
+python-telegram-bot==21.0.1
+requests==2.31.0
+rich==13.7.1
+telegram==0.0.1
+asyncio==3.4.3
 os
 random
 time
