--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
 uuid
 pyromod
 pyrogram
-requests==2.31.0
-rich==13.7.1
-telegram==0.0.1
-asyncio==3.4.3
+python
+requests
+rich
+telegram
+asyncio
 os
 random
 time
